--- a/app/src/sass/4-sections/_testimonials.scss
+++ b/app/src/sass/4-sections/_testimonials.scss
@@ -24,6 +24,8 @@
         display: flex;
         gap: 32px;
         overflow: auto;
+        scroll-snap-type: x mandatory;
+
 
         &__item {
             border-radius: $br-md;
@@ -32,6 +34,7 @@
             background-color: rgb(255, 255, 255);
             box-shadow: 0px 17px 45px -30px rgba($text-500, 0.25);
             padding: 24px;
+            scroll-snap-align: start;
         }
 
     }
